--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
 
 <div class="top-shelf"></div>
 
+<!-- HERO -->
 <section id="hero" class="hero">
   <div class="container">
     <div class="hero-inner">
       <h1>Free Indicators. No Pitch.</h1>
       <p>
         A quiet corner of the internet for traders who don’t believe basic indicators should cost a fortune.
-        Every indicator here is free to use on TradingView and documented in plain English — what it does,
-        how it works, and when it actually helps — without paywalls, upsells, or mystique.
+        Every indicator here is free to use on TradingView and documented in plain English — what it does, how it works,
+        and when it actually helps — without paywalls, upsells, or mystique.
       </p>
       <a href="#indicators" class="btn-primary">Browse indicators</a>
     </div>
@@ -45,6 +46,7 @@
 
 <main>
 
+<!-- INDICATORS -->
 <section id="indicators" class="section">
   <div class="container">
     <h2>Indicators</h2>
@@ -110,6 +112,86 @@
     <p class="section-intro" style="margin-top:1.6rem;font-style:italic;">
       More indicators will be added as they’re developed and published.
     </p>
+
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section id="about" class="section section-doc">
+  <div class="container">
+    <h2>About Open Indicator Lab</h2>
+
+    <p>
+      Open Indicator Lab exists to document how commonly used trading indicators actually work.
+      Over time, many standard technical ideas — moving averages, momentum oscillators, volatility measures —
+      have been repackaged, branded, and marketed as proprietary systems.
+      While tools are often explained at a surface level, the underlying mechanics are rarely discussed in detail.
+      This site focuses on what’s under the hood.
+    </p>
+
+    <h3 class="doc-subhead">What We Believe</h3>
+    <ul>
+      <li>Traders should understand the tools they use</li>
+      <li>Basic technical concepts shouldn’t require expensive subscriptions</li>
+      <li>Clarity is more useful than complexity</li>
+      <li>Education matters more than presentation</li>
+    </ul>
+
+    <h3 class="doc-subhead">What This Site Does</h3>
+    <ul>
+      <li>Explains what an indicator actually measures</li>
+      <li>Describes how it’s constructed at a conceptual level</li>
+      <li>Shows when it tends to help</li>
+      <li>Highlights where it tends to fail</li>
+      <li>Explains how traders commonly recreate similar behavior manually</li>
+    </ul>
+
+    <hr class="doc-divider" />
+
+    <h2 id="misconceptions">Common Misconceptions</h2>
+
+    <p><strong>“Proprietary” means unique or complex.</strong></p>
+    <p>
+      Often it just means a familiar technical idea packaged into a specific visual layout or preset.
+      Closed-source does not automatically mean fundamentally different.
+    </p>
+
+    <p><strong>More complexity means more edge.</strong></p>
+    <p>
+      Extra inputs and conditions can make a tool harder to understand and harder to use consistently.
+      Simpler tools can be strong because they’re easier to reason about.
+    </p>
+
+    <p><strong>Institutions use entirely different indicators.</strong></p>
+    <p>
+      Institutions may have different data and execution, but many concepts — trend, momentum, volatility —
+      are the same. Process and context matter more than “secret indicators.”
+    </p>
+
+    <p><strong>Paying for a tool guarantees better results.</strong></p>
+    <p>
+      Buying an indicator can feel like progress, but ownership doesn’t create understanding.
+      Without knowing what it measures and when it fails, price doesn’t help.
+    </p>
+
+    <p><strong>Indicators are meant to give signals.</strong></p>
+    <p>
+      Most tools are best used as context filters — trend bias, momentum conditions, volatility regime —
+      not as stand-alone buy/sell systems.
+    </p>
+
+    <p><strong>If it’s popular, it must be superior.</strong></p>
+    <p>
+      Popularity often reflects marketing reach and presentation.
+      Understanding how the indicator works matters more than how widely it’s promoted.
+    </p>
+
+    <hr class="doc-divider" />
+
+    <p><strong>Open Indicator Lab is not a signal service, a paid course, or a promise of profitability.</strong></p>
+    <p>We don’t provide alerts, trade calls, or shortcuts.</p>
+    <p>The goal is to document how indicators work — not to tell anyone when to trade.</p>
+    <p><strong>If an indicator can’t be explained down to its underlying mechanics, it probably isn’t understood well enough to trade.</strong></p>
 
   </div>
 </section>
