--- a/indicators/hybrid-confluence-rsi-mfi-stochrsi.html
+++ b/indicators/hybrid-confluence-rsi-mfi-stochrsi.html
@@ -29,50 +29,69 @@
 <main class="section section-doc">
   <div class="container">
 
+    <!-- Hybrid: Prev=Adaptive, Next=Blended -->
     <div class="indicator-nav">
       <a href="adaptive-dual-ma-trend-ribbon.html" class="btn-secondary">← Previous</a>
       <a href="../index.html#indicators" class="btn-secondary">All indicators</a>
       <a href="blended-net-liquidity-correlation.html" class="btn-secondary">Next →</a>
     </div>
 
-    <h1>Hybrid Confluence (RSI, MFI, StochRSI)</h1>
+    <h1>Hybrid Confluence (RSI, MFI, StochRSI) Two-Tier Momentum Framework</h1>
 
     <p>
-      Many traders explore multi-oscillator hybrid confluence approaches that combine momentum and volume signals —
-      most commonly RSI, Money Flow Index (MFI), and Stochastic RSI — to study stretched market conditions.
+      Many traders explore multi-oscillator hybrid confluence approaches that combine momentum and volume signals—most commonly RSI, Money Flow Index (MFI), and Stochastic RSI—to study stretched market conditions.
     </p>
 
     <p>
-      This script provides a fully transparent two-tier momentum framework built exclusively from standard,
-      well-documented technical indicators.
+      This script provides a transparent framework built exclusively from standard, well-documented indicators. The goal is to study hybrid momentum behavior without relying on proprietary logic or black-box tools.
     </p>
 
     <a class="chart-shot">
-      <img src="../assets/hybrid-confluence.png" alt="Hybrid Confluence example">
+      <img src="../assets/hybrid-confluence.png" alt="Hybrid Confluence example chart">
     </a>
+    <p class="chart-shot-caption">Screenshot preview. Once published, this can link to the TradingView script page.</p>
 
     <h2>What the Script Does</h2>
+
     <ul>
-      <li>Combines RSI, MFI, and StochRSI on a normalized scale</li>
-      <li>2-of-3 confluence highlights building pressure</li>
-      <li>3-of-3 confluence highlights extreme alignment</li>
-      <li>Visual intensity increases with persistence</li>
+      <li>Combines RSI (price momentum), MFI (volume-weighted momentum), and StochRSI (momentum relative to its own range).</li>
+      <li>Normalizes all components on a 0–100 scale for comparison and aggregation.</li>
+      <li>Creates a two-tier structure: 2-of-3 early pressure vs 3-of-3 extreme alignment.</li>
+      <li>Highlights persistence by increasing intensity when 3-of-3 conditions continue.</li>
     </ul>
 
     <h2>Why This Script Is Useful</h2>
+    <ol>
+      <li>Requires multi-indicator agreement instead of isolated signals.</li>
+      <li>Separates early pressure from extreme conditions.</li>
+      <li>Visualizes persistence rather than assuming one bar marks the exact top/bottom.</li>
+      <li>Designed as contextual information, not a standalone trading system.</li>
+    </ol>
+
+    <h2>How to Use</h2>
+    <ol>
+      <li>Adjust RSI/MFI/StochRSI lengths to fit your timeframe.</li>
+      <li>Watch 2-of-3 for early pressure.</li>
+      <li>Watch 3-of-3 for extreme alignment.</li>
+      <li>Note intensity increases as conditions persist.</li>
+      <li>Combine with trend/structure/volume for decisions.</li>
+    </ol>
+
+    <h2>What This Script Is Not</h2>
     <ul>
-      <li>Filters noise via multi-indicator agreement</li>
-      <li>Separates early pressure from extremes</li>
-      <li>Shows sustained momentum behavior</li>
+      <li>Not a paid or proprietary recreation.</li>
+      <li>Not a predictive “signal system”.</li>
+      <li>Does not claim to identify exact tops or bottoms.</li>
     </ul>
 
     <hr class="doc-divider" />
 
     <p><strong>Not signals. Not alerts. Not shortcuts.</strong></p>
-    <p>If it can’t be explained down to its underlying mechanics, it probably isn’t understood well enough to trade.</p>
+    <p>The goal is to document how indicators work — not to tell anyone when to trade.</p>
+    <p><strong>If an indicator can’t be explained down to its underlying mechanics, it probably isn’t understood well enough to trade.</strong></p>
 
     <h2>Disclaimer</h2>
-    <p>Educational use only. Not financial advice.</p>
+    <p>Educational use only. This is not financial advice.</p>
 
   </div>
 </main>
